@@ -2,23 +2,22 @@ package ecommerce.cartservice.filter;
 
 import ecommerce.aipcommon.model.status.RoleStatus;
 import ecommerce.aipcommon.util.JwtUtil;
+import io.jsonwebtoken.Claims;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.lang.NonNull;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
-import java.util.Map;
+import java.util.List;
 
 @Component
 @RequiredArgsConstructor
@@ -28,40 +27,39 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
     private String signerKey;
 
     @Override
-    protected void doFilterInternal(@NonNull HttpServletRequest request,
-                                    @NonNull HttpServletResponse response,
-                                    @NonNull FilterChain filterChain) throws ServletException, IOException {
-
+    protected void doFilterInternal(HttpServletRequest request,
+                                    HttpServletResponse response,
+                                    FilterChain filterChain) throws ServletException, IOException {
         final String authHeader = request.getHeader("Authorization");
-        String token = null;
+
 
         if (authHeader != null && authHeader.startsWith("Bearer ")) {
-            token = authHeader.substring(7);
-        }
+            String jwt = authHeader.substring(7);
 
-        if (token != null && SecurityContextHolder.getContext().getAuthentication() == null) {
+            if (!jwtUtil.validateToken(jwt)) {
+                response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+                return;
+            }
+
             try {
-                Map<String, Object> claims = jwtUtil.validateAndExtractClaims(token, signerKey);
-
-                String subject = (String) claims.get("sub"); // username/email
+                Claims claims = jwtUtil.extractAllClaims(jwt);
+                String userId = claims.getSubject();
                 String roleStr = (String) claims.get("role");
 
-                RoleStatus role = RoleStatus.valueOf(roleStr); // ép thành enum (USER hoặc ADMIN)
+                RoleStatus role = RoleStatus.valueOf(roleStr);
 
-                UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken(
-                        subject,
-                        null,
-                        Collections.singletonList(new SimpleGrantedAuthority(role.name())) // authority = "USER"/"ADMIN"
-                );
+                List<GrantedAuthority> authorities = List.of(new SimpleGrantedAuthority(role.name()));
 
-                authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
-                SecurityContextHolder.getContext().setAuthentication(authToken);
+                UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
+                        userId, null, authorities);
 
+                SecurityContextHolder.getContext().setAuthentication(auth);
             } catch (Exception e) {
-                System.out.println("JWT không hợp lệ: " + e.getMessage());
+                System.out.println("Invalid JWT: " + e.getMessage());
             }
         }
 
         filterChain.doFilter(request, response);
     }
+
 }
